fix: Made small CSS tweaks to improve mobile_header readability.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -36,6 +36,24 @@ header {
     background: #DFFFD6;
     width: 100%;
 }
+
+.social_media {
+  padding-top: 20px;
+}
+
+.mobile_icon{
+  padding-left: 5px;
+}
+
+.mobile-search{
+  padding: 10px;
+}
+
+.product-dropdown{
+  background-color: #DFFFD6;
+  padding-right: 5px;
+  font-size: 20px;
+}
   
   
   /* Custom page CSS
